# template_rust-yew-client

./: Cargo.toml  README.md  docker-compose.yml  index.html
src/: main.rs
src/screens/: home.rs  imprint.rs  login.rs  mod.rs  page_not_found.rs
src/services/: dom.rs  hashing.rs  mod.rs  routing.rs
