[package]
name = "yew-client"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo = "0.11.0"
js-sys = "0.3.69"
rs-web-api-models = { path="../rs-web-api-models" } # TODO Change to GitHub link.
sha2 = "0.10.8"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"

[dependencies.reqwest]
version = "0.12.3"
features = ["blocking", "cookies", "json"]

[dependencies.stylist]
version = "0.13.0"
features = ["yew", "yew_integration", "yew_use_style"]

[dependencies.yew]
version = "0.21"
features = ["csr"]

[dependencies.yew-router]
version = "0.18.0"

[dependencies.web-sys]
version-sys = "0.3.69"
features = [
    "CssStyleDeclaration",
    "Document",
    "DomTokenList",
    "Element",
    "HtmlInputElement",
    "Window",
]
